<resources>
    <string name="app_name">Cinema</string>
    <string name="unknown">Неизвестно</string>
    <string name="refresh">Обновить</string>

    <!-- WelcomeFragment -->
    <string name="welcome_title">Skillcinema</string>
    <string name="welcome_sKip">Пропустить</string>
    <string name="welcome_premiere">Узнавай\nо премьерах</string>
    <string name="welcome_create_collection">Создавай\nколлекции</string>
    <string name="welcome_share_friends">Делись\nс друзьями</string>

    <!-- HomeFragment -->
    <string name="home_all">Все</string>
    <string name="home_show_all">Показать все</string>
    <string name="home_premieres">Премьеры</string>
    <string name="home_popular">Популярное</string>
    <string name="home_top">Топ-250</string>
    <string name="home_serials">Сериалы</string>
    <string name="home_random">Рандом</string>
    <string name="home_error">Извините, что-то пошло не так.\nМы работаем над тем, чтобы\nисправить это как можно скорее.</string>

    <!-- FilmDetailFragment -->
    <string name="film_detail_name_film">%s %s</string>
    <string name="film_detail_year_film">%s, %s</string>
    <string name="film_detail_country_film">%s, %s, %s</string>
    <string name="film_detail_filmed">В фильме снимались</string>
    <string name="film_detail_film_worked">Над фильмом работали</string>
    <string name="film_detail_gallery">Галерея</string>
    <string name="film_detail_similar_film">Похожие фильмы</string>
    <string name="film_detail_season">Сезоны и серии</string>

    <!-- ActorFragment -->
    <string name="actor_title_best">Лучшее</string>
    <string name="actor_title_filmography">Фильмография</string>
    <string name="actor_to_list">К списку</string>

    <!-- SearchFragment -->
    <string name="search_error">К сожалению, по вашему запросу\nничего не найдено</string>
    <string name="search_hint">Введите название фильма</string>

    <!-- ProfileFragment -->
    <string name="profile_title_viewed">Просмотрено</string>
    <string name="profile_delete_history">Очистить\nисторию</string>
    <string name="profile_interesting">Вам было интересно</string>

    <!-- SearchSettingsFragment -->
    <string name="search_setting_title">Настройки поиска</string>
    <string name="search_setting_show">Показывать</string>
    <string name="search_setting_all">Все</string>
    <string name="search_setting_films">Фильмы</string>
    <string name="search_setting_serials">Сериалы</string>
    <string name="search_setting_title_country">Страна</string>
    <string name="search_setting_title_genre">Жанр</string>
    <string name="search_setting_title_year">Год</string>
    <string name="search_setting_title_rating">Рейтинг</string>
    <string name="search_setting_chosen_country">любая</string>
    <string name="search_setting_chosen_genre">любой</string>
    <string name="search_setting_chosen_year">любой</string>
    <string name="search_setting_chosen_rating">любой</string>
    <string name="search_setting_sort">Сортировать</string>
    <string name="search_setting_date">Дата</string>
    <string name="search_setting_popular">Популярность</string>
    <string name="search_setting_rating">Рейтинг</string>
    <string name="search_setting_not_viewed">Не просмотрен</string>
    <string name="search_setting_min_rating">1</string>
    <string name="search_setting_max_rating">10</string>
    <string name="search_setting_year_period">с %1$d до %2$d</string>

    <!-- SearchFiltersFragment -->
    <string name="search_filter_enter_country">Введите страну</string>
    <string name="search_filter_enter_genre">Введите жанр</string>
    <string name="search_filter_title_country">Страна</string>
    <string name="search_filter_title_genre">Жанр</string>

    <!-- SeasonFragment -->
    <string name="season_title_season">Сезон</string>
    <string name="season_title_number_serial">%1$d серия. %2$s</string>
    <string name="season_number_season">%d cезон,</string>

    <!-- PeriodFragment -->
    <string name="period_start_end">%1$d - %2$d</string>
    <string name="period_title">Период</string>
    <string name="period_title_start">Искать в период с</string>
    <string name="period_title_end">Искать в период до</string>
    <string name="period_choose">Выбрать</string>

    <plurals name="plurals_film">
        <item quantity="zero">нет фильмов</item>
        <item quantity="one">%d фильм</item>
        <item quantity="two">%d фильма</item>
        <item quantity="few">%d фильма</item>
        <item quantity="many">%d фильмов</item>
        <item quantity="other">%d фильмов</item>
    </plurals>

    <!-- GalleryFragment -->
    <string name="gallery_still">Кадры</string>
    <string name="gallery_shooting">Изображения со съемок</string>
    <string name="gallery_poster">Постеры</string>
    <string name="gallery_fan_art">Фан-арты</string>
    <string name="gallery_concept">Концепт-арты</string>
    <string name="gallery_wallpaper">Обои</string>
    <string name="gallery_cover">Обложки</string>
    <string name="gallery_screenshot">Скриншоты</string>
    <string name="gallery_promo">Промо</string>

    <plurals name="plurals_season">
        <item quantity="zero">нет сезонов,</item>
        <item quantity="one">%d сезон,</item>
        <item quantity="two">%d сезона,</item>
        <item quantity="few">%d сезона,</item>
        <item quantity="many">%d сезонов,</item>
        <item quantity="other">%d сезонов,</item>
    </plurals>

    <plurals name="plurals_series">
        <item quantity="zero">нет серий</item>
        <item quantity="one">%d серия</item>
        <item quantity="two">%d серии</item>
        <item quantity="few">%d серии</item>
        <item quantity="many">%d серий</item>
        <item quantity="other">%d серии</item>
    </plurals>
</resources>
