<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/flProgress"
        style="@style/ProgressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvError"
        style="@style/Text.Black.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_error"
        android:text="@string/home_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/TitleToolbar.TextBlack"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_left_gray"
            app:title="@string/film_detail_gallery"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

    </com.google.android.material.appbar.AppBarLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/dp_26"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filterStill"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_still" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterShooting"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_shooting" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterPoster"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_poster" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterPromo"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_promo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterFanArt"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_fan_art" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterConcept"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_concept" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterWallpaper"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_wallpaper" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterScreenshot"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_screenshot" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterCover"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_cover" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPhotos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_36"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        tools:listitem="@layout/item_small_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>
