<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/TitleToolbar.TextBlack"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_left_gray"
            app:title="@string/search_setting_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/search_setting_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <RadioGroup
        android:id="@+id/rgToggleShow"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleShow">

        <RadioButton
            android:id="@+id/rbAll"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_bg_radio_button_start"
            android:text="@string/search_setting_all" />

        <RadioButton
            android:id="@+id/rbFilms"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_bg_radio_button_center"
            android:checked="false"
            android:text="@string/search_setting_films" />

        <RadioButton
            android:id="@+id/rbSerials"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_bg_radio_button_end"
            android:checked="false"
            android:text="@string/search_setting_serials" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleCountry"
        style="@style/Text.Black.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/search_setting_title_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgToggleShow" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChosenCountry"
        style="@style/Text.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/search_setting_chosen_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgToggleShow" />

    <View
        android:id="@+id/viewCountry"
        style="@style/GrayBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleCountry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleGenre"
        style="@style/Text.Black.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/search_setting_title_genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewCountry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChosenGenre"
        style="@style/Text.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/search_setting_chosen_genre"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleGenre" />

    <View
        android:id="@+id/viewGenre"
        style="@style/GrayBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleGenre" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleYear"
        style="@style/Text.Black.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/search_setting_title_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewGenre" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChosenYear"
        style="@style/Text.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/search_setting_chosen_year"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleYear" />

    <View
        android:id="@+id/viewYear"
        style="@style/GrayBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleYear" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleRating"
        style="@style/Text.Black.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/search_setting_title_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewYear" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChosenRating"
        style="@style/Text.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/search_setting_chosen_rating"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewYear"
        app:layout_constraintTop_toTopOf="@id/tvTitleRating" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderCounter"
        style="@style/RatingSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_16"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleRating"
        app:values="@array/initial_slider_values" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMinRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        app:layout_constraintStart_toStartOf="@id/sliderCounter"
        app:layout_constraintTop_toBottomOf="@id/sliderCounter"
        android:text="@string/search_setting_min_rating" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMaxRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="@id/sliderCounter"
        app:layout_constraintTop_toBottomOf="@id/sliderCounter"
        android:text="@string/search_setting_max_rating" />

    <View
        android:id="@+id/viewRating"
        style="@style/GrayBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMinRating" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/search_setting_sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRating" />

    <RadioGroup
        android:id="@+id/rgToggleSort"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSort">

        <RadioButton
            android:id="@+id/rbDate"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_bg_radio_button_start"
            android:text="@string/search_setting_date" />

        <RadioButton
            android:id="@+id/rbPopular"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_bg_radio_button_center"
            android:checked="false"
            android:text="@string/search_setting_popular" />

        <RadioButton
            android:id="@+id/rbRating"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_bg_radio_button_end"
            android:checked="false"
            android:text="@string/search_setting_rating" />
    </RadioGroup>

    <View
        android:id="@+id/viewSort"
        style="@style/GrayBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgToggleSort" />

    <ImageView
        android:id="@+id/ivViewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_24"
        android:src="@drawable/ic_black_not_viewed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSort" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNotViewed"
        style="@style/Text.Black.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_36"
        android:text="@string/search_setting_not_viewed"
        app:layout_constraintBottom_toBottomOf="@id/ivViewed"
        app:layout_constraintStart_toEndOf="@id/ivViewed"
        app:layout_constraintTop_toTopOf="@id/ivViewed" />

</androidx.constraintlayout.widget.ConstraintLayout>
